[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Audio/MFGJ_062021_Tutorial_level_music.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Art/Art - L1R1 Assets/L1R1 - Platform Temp Machine.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Art - L1R1 Assets/L1R1 - Floor.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/Art - L1R1 Assets/L1R1 - Big Screen.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/Art - L1R1 Assets/L1R1 - Background.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Art - L1R1 Assets/L1R1 - Platform Desk.png" type="Texture" id=6]
[ext_resource path="res://Scene/Portal.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/Portal_Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scene/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scene/Rope.tscn" type="PackedScene" id=10]
[ext_resource path="res://Script/Level1.gd" type="Script" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 26.3699, 42.445, 40.0338, 24.7625, 46.4638, 19.538, 150.55, 21.9493, 163.008, 43.6507, 167.429, 117.998, 174.261, 117.998, 175.065, 138.092, 23.5568, 138.092, 21.1455, 117.596, 27.9774, 114.381 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 1136.02, 36.4872, 10.9279, 36.4872, 10.9279, 9.48108, 1136.02, 9.48108 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 1135.54, 37.934, 11.4101, 37.934, 11.4101, 9.96332, 1135.54, 9.96332 )

[sub_resource type="TileSet" id=4]
0/name = "L1R1 - Floor.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "L1R1 - Platform Temp Machine.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 192, 160 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 5 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "L1R1 - Platform Desk.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 15, 15, 1146, 48 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 2 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "L1R1 - Big Screen.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 768, 384 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Level 1" type="Node2D"]
script = ExtResource( 11 )

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
margin_top = -117.432
margin_right = 2737.0
margin_bottom = 682.568
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rope" parent="." instance=ExtResource( 10 )]
position = Vector2( 384.935, 137.575 )
scale = Vector2( 0.5, 0.5 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 3, 16 )
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -327663, 0, 0, -327662, 0, 0, -327661, 0, 0, -327660, 0, 0, -327659, 0, 0, -327658, 0, 0, -327657, 0, 0, -327656, 0, 0, -327655, 0, 0, -327654, 0, 0, -327653, 0, 0, -327652, 0, 0, -327651, 0, 0, -327650, 0, 0, -327649, 0, 0, -327648, 0, 0, -327647, 0, 0, -327646, 0, 0, -327645, 0, 0, -327644, 0, 0, -327643, 0, 0, -327642, 0, 0, -327641, 0, 0, -327640, 0, 0, -327639, 0, 0, -327638, 0, 0, -327637, 0, 0, -196609, 0, 0, -262129, 3, 0, -262102, 0, 0, -262101, 0, 0, -131073, 0, 0, -196566, 0, 0, -196565, 0, 0, -65537, 0, 0, -131030, 0, 0, -131029, 0, 0, -1, 0, 0, -65494, 0, 0, -65493, 0, 0, 65535, 0, 0, 13, 1, 0, 42, 0, 0, 43, 0, 0, 131071, 0, 0, 65578, 0, 0, 65579, 0, 0, 196607, 0, 0, 131084, 2, 0, 131114, 0, 0, 131115, 0, 0, 262143, 0, 0, 196650, 0, 0, 196651, 0, 0, 327679, 0, 0, 262186, 0, 0, 262187, 0, 0, 393215, 0, 0, 327722, 0, 0, 327723, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393252, 0, 0, 393253, 0, 0, 393254, 0, 0, 393255, 0, 0, 393256, 0, 0, 393257, 0, 0, 393258, 0, 0, 393259, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458788, 0, 0, 458789, 0, 0, 458790, 0, 0, 458794, 0, 0, 458795, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0, 524327, 0, 0, 524328, 0, 0, 524329, 0, 0, 524330, 0, 0, 524331, 0, 0 )

[node name="Portal_Button" parent="." instance=ExtResource( 8 )]
position = Vector2( 910.695, 53.1537 )
scale = Vector2( 0.5, 0.5 )

[node name="Portal" parent="." instance=ExtResource( 7 )]
position = Vector2( 1213.38, 46.9523 )
scale = Vector2( 0.4, 0.4 )

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 38.2818, 84.7459 )

[node name="Music_Tuto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 258.982, 56.8024 )
offset = Vector2( 10, 0 )
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 662.575, -68.465 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 722.995
margin_top = 9.6546
margin_right = 858.995
margin_bottom = 41.6546
text = "press E to activate the portal"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="exit_lvl" from="Player" to="." method="_on_Player_exit_lvl"]
[connection signal="portal_on" from="Player" to="." method="_on_Player_portal_on"]
